toolkit/themes/shared/extensions/extensions.inc.css
%
if
0
%
endif
import
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
common
.
css
"
)
;
.
main
-
content
{
padding
:
0
;
}
#
nav
-
header
{
min
-
height
:
39px
;
}
.
view
-
pane
>
.
list
>
scrollbox
{
padding
-
right
:
48px
;
padding
-
left
:
48px
;
}
.
global
-
warning
-
container
{
overflow
-
x
:
hidden
;
}
.
global
-
warning
{
-
moz
-
box
-
align
:
center
;
padding
:
0
8px
;
color
:
#
c8a91e
;
font
-
weight
:
bold
;
}
#
addons
-
page
[
warning
]
.
global
-
warning
-
container
{
background
-
image
:
linear
-
gradient
(
transparent
rgba
(
255
255
0
0
.
1
)
)
;
}
#
detail
-
view
.
global
-
warning
{
padding
:
4px
12px
;
border
-
bottom
:
1px
solid
var
(
-
-
in
-
content
-
border
-
color
)
;
}
media
(
max
-
width
:
600px
)
{
.
global
-
warning
-
text
{
display
:
none
;
}
.
global
-
warning
.
warning
-
icon
{
background
-
color
:
#
fff
;
box
-
shadow
:
0
0
2px
5px
#
fff
;
border
-
radius
:
10px
;
}
}
#
addons
-
page
[
warning
=
"
safemode
"
]
.
view
-
pane
[
type
=
"
plugin
"
]
.
global
-
warning
-
container
#
addons
-
page
[
warning
=
"
safemode
"
]
#
detail
-
view
[
loading
=
"
true
"
]
.
global
-
warning
-
container
{
background
-
color
:
inherit
;
background
-
image
:
none
;
}
.
warning
-
icon
.
error
-
icon
.
pending
-
icon
.
info
-
icon
{
width
:
16px
;
height
:
16px
;
margin
:
3px
0
;
}
.
warning
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
warning
.
svg
"
)
;
}
.
error
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
error
.
svg
"
)
;
}
.
pending
-
icon
.
info
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
info
-
positive
.
svg
"
)
;
}
.
addon
-
view
[
pending
=
"
disable
"
]
.
pending
-
icon
.
addon
-
view
[
pending
=
"
uninstall
"
]
.
pending
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
info
-
negative
.
svg
"
)
;
}
.
alert
-
container
{
-
moz
-
box
-
align
:
center
;
margin
-
right
:
48px
;
margin
-
left
:
48px
;
}
.
alert
-
spacer
-
before
{
-
moz
-
box
-
flex
:
1
;
}
.
alert
-
spacer
-
after
{
-
moz
-
box
-
flex
:
3
;
}
.
alert
{
-
moz
-
box
-
align
:
center
;
padding
:
10px
;
color
:
var
(
-
-
in
-
content
-
text
-
color
)
;
border
:
1px
solid
var
(
-
-
in
-
content
-
box
-
border
-
color
)
;
border
-
radius
:
2px
;
background
-
color
:
#
ebebeb
;
}
.
alert
.
alert
-
title
{
font
-
weight
:
bold
;
font
-
size
:
200
%
;
margin
-
bottom
:
15px
;
}
.
alert
button
{
margin
:
1em
2em
;
}
.
loading
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
loading
.
png
"
)
;
padding
-
left
:
20px
;
padding
-
right
:
20px
;
}
media
(
min
-
resolution
:
1
.
1dppx
)
{
.
loading
>
image
{
width
:
16px
;
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
loading
2x
.
png
"
)
;
}
}
button
.
warning
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
alerticon
-
warning
.
svg
"
)
;
}
#
categories
{
padding
-
top
:
0
;
}
.
category
[
disabled
]
{
overflow
:
hidden
;
height
:
0
;
min
-
height
:
0
;
opacity
:
0
;
transition
-
property
:
min
-
height
opacity
;
transition
-
duration
:
1s
0
.
8s
;
}
.
category
:
not
(
[
disabled
]
)
{
min
-
height
:
40px
;
transition
-
property
:
min
-
height
opacity
;
transition
-
duration
:
1s
0
.
8s
;
}
media
(
max
-
width
:
800px
)
{
.
category
-
name
{
display
:
none
;
}
}
.
category
-
badge
{
background
-
color
:
#
55D4FF
;
padding
:
2px
8px
;
margin
:
6px
0
;
margin
-
inline
-
start
:
6px
;
border
-
radius
:
100
%
;
color
:
#
FFF
;
font
-
weight
:
bold
;
text
-
align
:
center
;
}
.
category
-
badge
[
value
=
"
0
"
]
{
display
:
none
;
}
#
category
-
search
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
search
.
svg
"
)
;
}
#
category
-
discover
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
discover
.
svg
"
)
;
}
#
category
-
locale
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
languages
.
svg
"
)
;
}
#
category
-
extension
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
extensions
.
svg
"
)
;
}
#
category
-
service
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
service
.
svg
"
)
;
}
#
category
-
theme
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
themes
.
svg
"
)
;
}
#
category
-
plugin
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
plugins
.
svg
"
)
;
}
#
category
-
dictionary
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
dictionaries
.
svg
"
)
;
}
#
category
-
experiment
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
experiments
.
svg
"
)
;
}
#
category
-
legacy
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
legacy
.
svg
"
)
;
}
#
category
-
availableUpdates
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
available
.
svg
"
)
;
}
#
category
-
recentUpdates
>
.
category
-
icon
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
extensions
/
category
-
recent
.
svg
"
)
;
}
#
header
{
margin
-
top
:
20px
;
margin
-
bottom
:
20px
;
margin
-
right
:
48px
;
margin
-
left
:
48px
;
}
media
(
max
-
width
:
600px
)
{
#
header
-
search
{
width
:
12em
;
}
}
.
view
-
header
{
margin
:
0
48px
;
border
-
bottom
:
1px
solid
var
(
-
-
in
-
content
-
box
-
border
-
color
)
;
}
/* ... */

