Bug 1389559 - Wrap about:addons warnings to maintain narrow layouts r=rhelmer
MozReview-Commit-ID: 24Z8qEdROmQ

UltraBlame original commit: d2ad47692c8763a1365a9eda357730052df6fc40

--- a/toolkit/themes/shared/extensions/extensions.inc.css
+++ b/toolkit/themes/shared/extensions/extensions.inc.css
@@ -631,6 +631,12 @@ color
 #
 ebebeb
 ;
+text
+-
+align
+:
+center
+;
 }
 .
 alert
@@ -667,6 +673,23 @@ margin
 :
 1em
 2em
+;
+}
+.
+experiment
+-
+info
+-
+container
+>
+.
+alert
+button
+{
+margin
+:
+0
+4px
 ;
 }
 .
